--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 img {
-min-height: 200px;
+height: 200px;
 width: 200px;
 padding: 20px;
 }
@@ -35,3 +35,12 @@ padding: 20px;
 .flowerrow2 {
     padding-bottom: 60px;
 }
+
+.rotate {
+  transform: rotate(30deg);
+}
+
+.rotateAgain {
+  transform: rotate(-30deg);
+}
+
